# pruning

./: .travis.yml  README.md  test_tfrecord.py
android/: .gitignore  README.md
android/app/: .directory  build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/example/zhe/zhe/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/administrator/myapplication/: MainActivity.java
android/app/src/main/java/com/example/zhe/zhe/: MainActivity.java
android/app/src/main/java/zhe/zhe/: .directory  LoginActivity.java  RegisterActivity.java
android/app/src/main/res/layout/: activity_login.xml  activity_register.xml  app_bar_main.xml  content_main.xml  nav_header_main.xml
android/app/src/main/res/menu/: activity_main_drawer.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/zhe/zhe/: ExampleUnitTest.java
linux/: LICENSE  README.md  cliper.service  here.yaml  linux.cabal
linux/app/: Main.hs
linux/src/: Api.hs  Constant.hs  Lens.hs  OptParse.hs  Types.hs  Util.hs  client.hs
net_program/: chdomain  chgdomain.c
net_program/TCP_CS/: tcp_net_client  tcp_net_client.c  tcp_net_server  tcp_net_server.c  tcp_net_socket.c  tcp_net_socket.h
pruning/: weight.py
server/: .gitignore  Makefile  server.cabal  spec.html  spec.md  spec.txt
server/app/: Main.hs
server/src/: Api.hs  Constant.hs  Crypto.hs  Database.hs  JSON.hs  Logger.hs  Types.hs  client.hs
