name:                linux
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Frefreak/linux#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright 2016 Xiangyu Zhu <frefreak.zxy@gmail.com>
category:            Abstract
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable linux-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linux
  default-language:    Haskell2010

test-suite linux-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linux
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/linux
