name:                server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Frefreak/server#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright Xiangyu Zhu (c) 2016
category:            Abstract
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto
                     , Api
                     , Database
                     , JSON
                     , Types
                     , Constant
                     , Logger
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , websockets
                     , aeson
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , scientific
                     , random
                     , unordered-containers
  default-language:    Haskell2010

executable cliperServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
                     , websockets
                     , wai-websockets
                     , wai
                     , warp
                     , wai-extra
                     , data-default
                     , http-types
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , unordered-containers
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/server
